<resources>
    <string name="app_name">Diary</string>

<!--    Fragment titles-->
    <string name="entry_creation_fragment_title">New entry…</string>
    <string name="entry_edit_fragment_title">Edit form…</string>
    <string name="diary_home_fragment_title">Home</string>
    <string name="login_fragment_title">Login</string>
    <string name="pin_fragment_title">Create pin</string>
    <string name="pin_confirm_fragment_title">Confirm pin</string>


<!--    Button labels-->
    <string name="clearButtonLabel">Clear</string>
    <string name="entryCreationSaveButtonLabel">Save</string>
    <string name="entryEditModifyButtonLabel">Update</string>
    <string name="entryEditDeleteButtonLabel">Delete</string>

<!--    Creation form hints-->
    <string name="entry_creation_date_hint">date</string>
    <string name="entry_creation_topic_hint">Topic</string>
    <string name="entry_creation_mood_hint">Mood</string>
    <string name="entry_creation_body_hint">Enter your text here…</string>

    <!--    Edit form hints-->
    <string name="entry_edit_topic_hint">Topic</string>
    <string name="entry_edit_mood_hint">Mood</string>
    <string name="entry_edit_body_hint">Enter your text here…</string>

<!--    Login hints-->
    <string name="login_password_field_hint">Enter pin</string>

</resources>