<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/entry_creation_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/entry_creation_date_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/entry_creation_topic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/entry_creation_topic_hint"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_creation_date" />

        <EditText
            android:id="@+id/entry_creation_mood"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/entry_creation_mood_hint"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_creation_topic"
            app:layout_constraintBottom_toTopOf="@+id/entry_creation_body"
            />

        <EditText
            android:id="@+id/entry_creation_body"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/entry_creation_body_hint"
            android:inputType="textMultiLine"
            android:imeOptions="actionDone"
            app:layout_constraintBottom_toTopOf="@+id/entry_creation_save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_creation_mood" />

        <Button
            android:id="@+id/entry_creation_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entryCreationSaveButtonLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_creation_body" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>