<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/entry_edit_topic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:gravity="start|top"
            android:hint="@string/entry_edit_topic_hint"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            android:textColorLink="@color/mediumSeaGreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/entry_edit_mood"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:gravity="start|top"
            android:hint="@string/entry_edit_mood_hint"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            android:textColorLink="@color/mediumSeaGreen"
            app:layout_constraintBottom_toTopOf="@+id/entry_edit_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_edit_topic" />

        <EditText
            android:id="@+id/entry_edit_body"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:gravity="start|top"
            android:hint="@string/entry_edit_body_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:textColorLink="@color/mediumSeaGreen"
            app:layout_constraintBottom_toTopOf="@+id/entry_edit_modify_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_edit_mood" />

        <Button
            android:id="@+id/entry_edit_modify_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/entryEditModifyButtonLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_edit_body" />

        <Button
            android:id="@+id/entry_edit_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/entryEditDeleteButtonLabel"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entry_edit_body" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>